--- a/css/style.css
+++ b/css/style.css
@@ -8342,13 +8342,16 @@ p:last-child,
 
 /* line 2, ../scss/fxj/_footer.scss */
 #sliding-popup {
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
   background: transparent none;
   bottom: 15px;
   position: fixed;
   width: 100%;
   z-index: 21;
   text-align: center; }
-  /* line 10, ../scss/fxj/_footer.scss */
+  /* line 11, ../scss/fxj/_footer.scss */
   #sliding-popup .popup-content {
     background-color: rgba(252, 248, 227, 0.9);
     background-image: none;
@@ -8359,28 +8362,28 @@ p:last-child,
     margin: 0 auto;
     width: calc(100% - 120px);
     max-width: 1170px; }
-    /* line 22, ../scss/fxj/_footer.scss */
+    /* line 23, ../scss/fxj/_footer.scss */
     #sliding-popup .popup-content #popup-text {
       margin: 0;
       padding: 0;
       width: calc(100% - 70px);
       max-width: 1100px; }
-      /* line 27, ../scss/fxj/_footer.scss */
+      /* line 28, ../scss/fxj/_footer.scss */
       #sliding-popup .popup-content #popup-text p {
         color: #8a6d3b;
         font-size: 12px;
         font-weight: 400;
         margin: 0; }
-      /* line 33, ../scss/fxj/_footer.scss */
+      /* line 34, ../scss/fxj/_footer.scss */
       #sliding-popup .popup-content #popup-text a {
         color: #66512c; }
-    /* line 37, ../scss/fxj/_footer.scss */
+    /* line 38, ../scss/fxj/_footer.scss */
     #sliding-popup .popup-content #popup-buttons {
       padding: 0;
       max-width: 70px;
       margin: 0;
       float: right; }
-      /* line 43, ../scss/fxj/_footer.scss */
+      /* line 44, ../scss/fxj/_footer.scss */
       #sliding-popup .popup-content #popup-buttons .agree-button {
         -webkit-appearance: none;
         background: transparent;
@@ -8392,7 +8395,7 @@ p:last-child,
         margin: 0;
         padding: 0;
         text-shadow: none; }
-        /* line 55, ../scss/fxj/_footer.scss */
+        /* line 56, ../scss/fxj/_footer.scss */
         #sliding-popup .popup-content #popup-buttons .agree-button:after {
           width: 13px;
           height: 13px;
@@ -8403,15 +8406,15 @@ p:last-child,
           font-weight: 300;
           line-height: .9;
           margin-left: 5px; }
-        /* line 66, ../scss/fxj/_footer.scss */
+        /* line 67, ../scss/fxj/_footer.scss */
         #sliding-popup .popup-content #popup-buttons .agree-button:hover, #sliding-popup .popup-content #popup-buttons .agree-button:focus {
           background: inherit;
           text-decoration: underline; }
-      /* line 72, ../scss/fxj/_footer.scss */
+      /* line 73, ../scss/fxj/_footer.scss */
       #sliding-popup .popup-content #popup-buttons .find-more-button {
         display: none; }
 
-/* line 81, ../scss/fxj/_footer.scss */
+/* line 82, ../scss/fxj/_footer.scss */
 .sticky-footer.container-fluid,
 .footer.container-fluid {
   border-top: 1px solid white;
@@ -8421,7 +8424,7 @@ p:last-child,
   max-width: none;
   padding: 0; }
 
-/* line 90, ../scss/fxj/_footer.scss */
+/* line 91, ../scss/fxj/_footer.scss */
 .region-sticky-footer,
 .region-footer {
   max-width: 1170px;
@@ -8429,106 +8432,110 @@ p:last-child,
   margin-left: auto;
   padding: 15px; }
 
-/* line 98, ../scss/fxj/_footer.scss */
+/* line 99, ../scss/fxj/_footer.scss */
 .region-sticky-footer {
   padding: 5px 15px; }
 
-/* line 103, ../scss/fxj/_footer.scss */
+/* line 105, ../scss/fxj/_footer.scss */
 .sticky-footer .block {
   margin-bottom: 0; }
-/* line 107, ../scss/fxj/_footer.scss */
+/* line 109, ../scss/fxj/_footer.scss */
 .sticky-footer.container-fluid {
   background-color: #c0392b; }
-/* line 110, ../scss/fxj/_footer.scss */
+/* line 112, ../scss/fxj/_footer.scss */
 .sticky-footer .menu.nav {
   border: 0;
   float: left;
   margin: 0;
   padding: 0; }
-  /* line 117, ../scss/fxj/_footer.scss */
+  /* line 119, ../scss/fxj/_footer.scss */
   .sticky-footer .menu.nav a {
     background-color: #c0392b;
     color: white; }
-    /* line 121, ../scss/fxj/_footer.scss */
+    /* line 123, ../scss/fxj/_footer.scss */
     .sticky-footer .menu.nav a:hover, .sticky-footer .menu.nav a:focus {
       text-decoration: underline; }
-    /* line 126, ../scss/fxj/_footer.scss */
+    /* line 128, ../scss/fxj/_footer.scss */
     .sticky-footer .menu.nav a .svg-inline--fa {
       margin-right: 5px; }
-/* line 132, ../scss/fxj/_footer.scss */
+/* line 134, ../scss/fxj/_footer.scss */
 .sticky-footer .block-addtoany {
   float: right;
   position: relative; }
-  /* line 135, ../scss/fxj/_footer.scss */
+  /* line 137, ../scss/fxj/_footer.scss */
   .sticky-footer .block-addtoany .a2a_kit {
     position: relative;
     right: 0;
     bottom: 2em; }
 
-/* line 144, ../scss/fxj/_footer.scss */
+/* line 146, ../scss/fxj/_footer.scss */
 .js .sticky-footer {
-  width: 100%; }
-  /* line 147, ../scss/fxj/_footer.scss */
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  width: 100%;
+  bottom: auto; }
+  /* line 151, ../scss/fxj/_footer.scss */
   .js .sticky-footer.fixed {
     position: fixed;
     bottom: 0px;
     top: auto;
     z-index: 20; }
 
-/* line 158, ../scss/fxj/_footer.scss */
+/* line 162, ../scss/fxj/_footer.scss */
 .footer.container-fluid {
   background-color: #333333; }
-/* line 161, ../scss/fxj/_footer.scss */
+/* line 165, ../scss/fxj/_footer.scss */
 .footer .svg-inline--fa {
   width: 30px; }
-/* line 164, ../scss/fxj/_footer.scss */
+/* line 168, ../scss/fxj/_footer.scss */
 .footer a {
   color: white; }
-/* line 167, ../scss/fxj/_footer.scss */
+/* line 171, ../scss/fxj/_footer.scss */
 .footer h2 {
   color: #555555;
   font-size: 20px;
   font-weight: 400;
   margin-top: 0;
   margin-bottom: 20px; }
-/* line 174, ../scss/fxj/_footer.scss */
+/* line 178, ../scss/fxj/_footer.scss */
 .footer strong {
   font-weight: 400; }
-/* line 177, ../scss/fxj/_footer.scss */
+/* line 181, ../scss/fxj/_footer.scss */
 .footer .block {
   margin: 0 0 15px 0; }
-  /* line 185, ../scss/fxj/_footer.scss */
+  /* line 189, ../scss/fxj/_footer.scss */
   .footer .block:first-of-type img {
     width: 100px; }
-  /* line 189, ../scss/fxj/_footer.scss */
+  /* line 193, ../scss/fxj/_footer.scss */
   .footer .block:last-of-type {
     border-top: 1px solid #777777;
     color: #777777;
     margin: 0;
     padding: 15px 0 0 0; }
-    /* line 195, ../scss/fxj/_footer.scss */
+    /* line 199, ../scss/fxj/_footer.scss */
     .footer .block:last-of-type a {
       color: #777777; }
 
 @media (min-width: 768px) {
-  /* line 206, ../scss/fxj/_footer.scss */
+  /* line 210, ../scss/fxj/_footer.scss */
   .footer .block:first-child img {
     width: auto; }
-  /* line 210, ../scss/fxj/_footer.scss */
+  /* line 214, ../scss/fxj/_footer.scss */
   .footer .block:last-of-type {
     clear: both;
     float: left;
     width: 100%; } }
 @media (max-width: 768px) {
-  /* line 220, ../scss/fxj/_footer.scss */
+  /* line 224, ../scss/fxj/_footer.scss */
   .sticky-footer .menu.nav a {
     padding: 5px 15px;
     text-align: center; }
-    /* line 223, ../scss/fxj/_footer.scss */
+    /* line 227, ../scss/fxj/_footer.scss */
     .sticky-footer .menu.nav a .svg-inline--fa {
       display: block;
       margin: 0 auto 5px auto; }
-  /* line 228, ../scss/fxj/_footer.scss */
+  /* line 232, ../scss/fxj/_footer.scss */
   .sticky-footer .block-dropdown-language {
     margin-top: 5px; } }
 /* line 2, ../scss/fxj/_addtoany.scss */
